--- a/Project/main.css
+++ b/Project/main.css
@@ -77,12 +77,13 @@ nav a:hover::before {
     height: calc(100vh - 100px);
     /* viewport height - hight of the header, so test always in the center */
     background-position: center;
-    text-align: center;
+
     padding-top: 105px;
     /* to get it from the navigation bar (maybe there is more correct way, but that's what I came up with) */
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    /* parallax settings */
     display: flex;
     /* for centering the name on the picture */
     align-items: center;
@@ -125,7 +126,8 @@ section p {
 .plx-img1 h1 {
     font-size: 20vw;
     line-height: 15px;
-    word-spacing: -10vw;
+    /* word-spacing: -10vw; 
+    doesnt work in all browsers. Replaced with negatice margin*/
     text-align: center;
     align-items: baseline;
     font-family: 'Cormorant', serif;
@@ -134,8 +136,9 @@ section p {
 h1 span:nth-of-type(2) {
 
     bottom: 50px;
-    color: rgb(182, 152, 90, 60%);
+    color: rgb(182, 152, 90, 70%);
     font-family: 'Cormorant', serif;
+    margin-left: -10vw;
 }
 
 .plx-img3 {
