--- a/Project/main.css
+++ b/Project/main.css
@@ -237,9 +237,12 @@ footer p {
     font-size: 5rem;
     opacity: 70%;
 }
-                                                    /* FOOTER SETTINGS */
+
+/***********************************************************************
+ *  FOOTER
+ **********************************************************************/
 footer p,
-address{
+address {
     font-size: 16px;
     font-style: inherit;
 }
@@ -324,7 +327,9 @@ footer a:hover {
     text-align: center;
 }
 
-                                                        /* SCHEDULE PAGE SETTINGS */
+/***********************************************************************
+ *  SCHEDULE PAGE
+ **********************************************************************/
 .plx-img-schedule,
 .plx-img-contact,
 .plx-img-gallery {
@@ -356,13 +361,20 @@ footer a:hover {
     align-items: baseline;
     font-family: 'Cormorant', serif;
 }
-/* Schecule TABLE settings */
+
+/***********************************************************************
+ *  TABLE SETTINGS
+ **********************************************************************/
 table {
     margin: 0 auto 3vw auto;
     width: 90%;
 }
-table, th, td, tr {
-  
+
+table,
+th,
+td,
+tr {
+
     border-bottom: 1px solid black;
     border-collapse: collapse;
     text-align: center;
@@ -370,22 +382,23 @@ table, th, td, tr {
     font-size: 16px;
     height: 5vh;
 }
+
 th {
     background-color: rgb(182, 152, 90);
 }
 
-tr { 
-    
-}
+tr {}
 
-tr:hover {background-color: rgb(182, 152, 90, 50%)}
+tr:hover {
+    background-color: rgb(182, 152, 90, 50%)
+}
 
 table .time {
     /* border-right: 1px solid black; */
     background-color: rgb(182, 152, 90, 50%);
 }
 
-.trainer-name{
+.trainer-name {
     color: rgb(182, 152, 90);
     font-weight: 700;
     display: block;
@@ -397,16 +410,18 @@ table .time {
     /* to center button */
 }
 
-                                                    /* CONTACT PAGE SETTINGS */
+/***********************************************************************
+ *  CONTACT PAGE
+ **********************************************************************/
 
 .plx-img-contact {
     background-image: url(images/pic3.jpg);
-        /* background picture for contact page */
+    /* background picture for contact page */
 }
-input[type='text'], 
+
+input[type='text'],
 input[type='email'],
-input[type='number'] 
-{
+input[type='number'] {
     width: 50%;
     height: 25px;
     margin-bottom: 10px;
@@ -414,18 +429,21 @@ input[type='number']
 
 
 label {
-    display: inline-block; /*to remember: by default label is inline, which won't take height and width*/
+    display: inline-block;
+    /*to remember: by default label is inline, which won't take height and width*/
     width: 250px;
     font-size: 22px;
 }
 
-ul, li {
+ul,
+li {
     list-style: none;
     padding: 0;
     line-height: 1.5rem;
 }
+
 address.contact-address,
-address.contact-address a{
+address.contact-address a {
     font-style: inherit;
     font-size: inherit;
     font-family: inherit;
@@ -434,30 +452,35 @@ address.contact-address a{
     line-height: 1.5rem;
 }
 
-/* GALLERY PAGE SETTINGS */
+/***********************************************************************
+ *  GALLERY PAGE
+ **********************************************************************/
 .plx-img-gallery {
     background-image: url(images/pic1.jpg);
 }
 
-div.gallery{
-display: flex;
-flex-wrap: wrap;
-justify-content:center;
+div.gallery {
+    /* display: flex;
+flex-wrap: wrap; */
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-gap: 30px;
+    margin: 0 30px 0 30px;
 
 }
 
 div.gallery img {
     aspect-ratio: 3/2;
-    height: 300px;
-    margin: 3vh;
-    transition: 0.7s;
+    transition: 0.7s ease-in-out;
+    width: 100%;
+    height: auto;
 }
 
 div.gallery img:hover {
     transform: scale(1.1);
-  box-shadow: 3px 3px 4px #888888;
+    box-shadow: 3px 3px 4px #888888;
 }
 
-div.center{
+div.center {
     text-align: center;
 }
