--- a/Project/main.css
+++ b/Project/main.css
@@ -19,6 +19,9 @@ body {
 
 }
 
+/***********************************************************************
+ *  HEADER
+ **********************************************************************/
 header {
     position: fixed;
     top: 0px;
@@ -70,6 +73,10 @@ nav a:hover::before {
     justify-content: space-evenly;
     font-size: 25px;
 }
+
+/***********************************************************************
+ *  INDEX & GENERAL
+ **********************************************************************/
 
 .plx-img1 {
     background-image: url(images/landing.jpg);
@@ -180,22 +187,6 @@ a.button:hover {
     color: black;
 }
 
-footer {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 5% 1fr 1fr 1fr 1fr 5%;
-    border-top: 2px solid rgb(182, 152, 90);
-    font-size: 20px;
-    justify-items: center;
-    align-items: center;
-    padding: 3vh 0 3vh 0;
-    gap: 2vh;
-}
-
-footer p {
-    margin: 0;
-}
-
 .card-row {
     display: flex;
     justify-content: space-evenly;
@@ -216,7 +207,7 @@ footer p {
 
 }
 
-.number-left {
+/* .number-left {
     color: rgb(182, 152, 90);
     float: left;
     position: absolute;
@@ -236,11 +227,53 @@ footer p {
     font-family: 'Cormorant', serif;
     font-size: 5rem;
     opacity: 70%;
+} */
+
+div.index-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    /* display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 30px; */
+    margin: 30px;
+    justify-content: center;
+
+}
+
+div.index-gallery img {
+    aspect-ratio: 3/2;
+    transition: 0.7s ease-in-out;
+    width: 30%;
+    min-width: 300px;
+    /* is needed otherwise it will be shrinking forever because of the % */
+    height: auto;
+    margin: 10px;
+}
+
+div.index-gallery img:hover {
+    transform: scale(1.1);
+    box-shadow: 3px 3px 4px #888888;
 }
 
 /***********************************************************************
  *  FOOTER
  **********************************************************************/
+footer {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 5% 1fr 1fr 1fr 1fr 5%;
+    border-top: 2px solid rgb(182, 152, 90);
+    font-size: 20px;
+    justify-items: center;
+    align-items: center;
+    padding: 3vh 0 3vh 0;
+    gap: 2vh;
+}
+
+footer p {
+    margin: 0;
+}
+
 footer p,
 address {
     font-size: 16px;
@@ -466,6 +499,7 @@ flex-wrap: wrap; */
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     grid-gap: 30px;
     margin: 0 30px 0 30px;
+    justify-content: center;
 
 }
 
