--- a/Project/main.css
+++ b/Project/main.css
@@ -12,10 +12,6 @@ body {
     margin: 0px;
     padding: 0px;
     border: 0px;
-    /* display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-auto-rows: minmax(100px, auto);
-    grid-gap: 1em; */
 
 }
 
@@ -345,6 +341,7 @@ footer a:hover {
     grid-row: 2/3;
     grid-column: 5/6;
     align-self: flex-start;
+    justify-self:center;
 }
 
 #footer-join {
